@@ -1,24 +1,32 @@
 package com.ashafee.ccserver.challenge.java;
 
+import com.ashafee.ccserver.challenge.ChallengeTest;
 import org.springframework.util.FileSystemUtils;
 
 import javax.tools.*;
+import javax.tools.JavaCompiler.CompilationTask;
 import java.io.*;
 import java.net.URI;
+import java.nio.file.FileSystem;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
 
 
-public class Compiler {
+public class JavaCompiler implements AutoCloseable {
     private StringBuilder output = new StringBuilder();
-    private final Path baseChallengeDir = Path.of("target/classes/challengebuilds");
+    private final Path baseChallengeDir;
     private String challengeDir;
-    private final String className = "Challenge";
+    private final String className;
+    private List<String> jvmArgs;
 
-    public Compiler() {
+    public JavaCompiler(String challengeDir, String className) {
+        baseChallengeDir = Path.of(challengeDir);
+        this.className = className;
+        jvmArgs = new ArrayList<String>(Arrays.asList(
+                "-Djava.security.manager",
+                "-Djava.security.policy=policyFile.policy"
+        ));
         if (Files.notExists(baseChallengeDir)) {
             try {
                 Files.createDirectories(baseChallengeDir);
@@ -28,20 +36,22 @@ public class Compiler {
         }
     }
 
+    public String getLastOutput() {
+        return output.toString();
+    }
+
     // adapted from https://stackoverflow.com/questions/21544446/how-do-you-dynamically-compile-and-load-external-java-classes
-    public String compile(String code) {
+    public Boolean compile(String code) {
+        output = new StringBuilder();
         try {
             challengeDir = baseChallengeDir + "/" + Files.createTempDirectory(baseChallengeDir, null).getFileName();
 
             /** Compilation Requirements *********************************************************************************************/
             DiagnosticCollector<JavaFileObject> diagnostics = new DiagnosticCollector<JavaFileObject>();
-            JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
+            javax.tools.JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
             StandardJavaFileManager fileManager = compiler.getStandardFileManager(diagnostics, null, null);
             fileManager.setLocation(StandardLocation.CLASS_OUTPUT, Arrays.asList(new File(challengeDir)));
-            //TODO: create dir if not there
-            Writer outputWriter = new StringWriter();
-
-            JavaCompiler.CompilationTask task = compiler.getTask(
+            CompilationTask compilationTask = compiler.getTask(
                     null,
                     fileManager,
                     diagnostics,
@@ -49,91 +59,103 @@ public class Compiler {
                     null,
                     Arrays.asList(new JavaSourceFromString(className, code)));
             /********************************************************************************************* Compilation Requirements **/
-            if (task.call()) {
-                List<String> arguments = new ArrayList<>();
-
-                try {
-                    exec(className, new ArrayList<String>(), arguments);
-                } catch (InterruptedException e) {
-                    e.printStackTrace();
-                } catch (Exception e) {
-                    e.printStackTrace();
-                }
-
-                /************************************************************************************************* Load and execute **/
+            if (compilationTask.call()) {
+                return true;
             } else {
                 for (Diagnostic<? extends JavaFileObject> diagnostic : diagnostics.getDiagnostics()) {
-                    System.out.format("Error on line %d in %s%n",
+                    String verboseErrorMsg =  diagnostic.toString();
+                    output.append(String.format("Error on line %d: %s\n",
                             diagnostic.getLineNumber(),
-                            diagnostic.getSource().toUri());
+                            verboseErrorMsg.substring(verboseErrorMsg.indexOf(':') + 3)));
                 }
             }
             fileManager.close();
-            return outputWriter.toString();
         } catch (IOException e) {
-            return e.getMessage();
+            output.append(e.getMessage());
         }
-        finally { //TODO: if compile/run are split out, consider when to delete the temp dir
-            try {
-                FileSystemUtils.deleteRecursively(Path.of(challengeDir));
-            } catch (IOException e) {
-                e.printStackTrace();
+        return false;
+    }
+
+    public Boolean runTests(Set<ChallengeTest> tests) {
+        for (ChallengeTest test : tests) {
+            runTest(test);
+            if (!output.toString().equals(test.getExpectedOutput())) {
+                String inputs = test.getInputArgs().length() > 0 ? String.format("Input: %s, ", test.getInputArgs()) : "";
+                String result = inputs + "Expected: " + test.getExpectedOutput() + ", Got: " + output.toString();
+                output.replace(0, output.length(), result);
+                return false;
             }
+        }
+        return true;
+    }
+
+    private void runTest(ChallengeTest test) {
+        List<String> arguments = Arrays.asList(test.getInputArgs().split(","));
+        output.setLength(0);
+        try {
+            executeCode(className, arguments);
+        } catch (Exception e) {
+            output.append(e.getMessage());
         }
     }
 
-    //from https://dzone.com/articles/running-a-java-class-as-a-subprocess
-    public int exec(String className, List<String> jvmArgs, List<String> args) throws Exception {
+    //adapted from https://dzone.com/articles/running-a-java-class-as-a-subprocess
+    private int executeCode(String className, List<String> args) throws Exception {
         String javaHome = System.getProperty("java.home");
         String javaBin = javaHome + File.separator + "bin" + File.separator + "java";
         String classpath = new File(".").getCanonicalPath() + "/" + challengeDir + ";" + System.getProperty("java.class.path");
         List<String> command = new ArrayList<>();
         command.add(javaBin);
-        command.addAll(jvmArgs); //TODO: File access restriction
+        command.addAll(jvmArgs);
         command.add("-cp");
         command.add(classpath);
         command.add(className);
         command.addAll(args);
-        ProcessBuilder builder = new ProcessBuilder(command);
-        Process process = builder
+        Process process = (new ProcessBuilder(command))
                 .redirectErrorStream(true)
                 .start();
         process.getOutputStream().close();
 
-        printLines(command + " stdout:", process.getInputStream());
-        printLines(command + " stderr:", process.getErrorStream());
-
-        process.waitFor();
-        return process.exitValue();
+        setStreamOutput(process.getInputStream(), output);
+        setStreamOutput(process.getErrorStream(), output);
+        return process.waitFor();
     }
 
-    //adapted from code by Almas Baimagambetov
-    private void printLines(String name, InputStream ins) {
-        output = new StringBuilder();
+    /**
+     * print lines out from an InputStream to a StringBuilder
+     * adapted from code by Almas Baimagambetov
+     */
+    private void setStreamOutput(InputStream ins, StringBuilder stringBuilder) {
         Thread t = new Thread(() -> {
             String line = null;
             try (BufferedReader in = new BufferedReader(new InputStreamReader(ins))) {
                 while ((line = in.readLine()) != null) {
-                    output.append(line);
+                    stringBuilder.append(line);
                 }
             }
-            catch (Exception e) { //TODO: do something with this
-//                Debug.trace(1, "Cannot open stream to Charon.jar: " + e.getMessage());
+            catch (Exception e) {
+                System.out.println(e);
             }
         });
         t.start();
     }
 
-    public String getLastOutput()
-    {
-        return  output.toString();
+    @Override
+    public void close() {
+        try { //remove temp directory used
+            if (Files.exists(Path.of(challengeDir))){
+                FileSystemUtils.deleteRecursively(Path.of(challengeDir));
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
 
     /**
      * A file object used to represent source coming from a string.
      * Taken from https://docs.oracle.com/javase/7/docs/api/javax/tools/JavaCompiler.html
      */
-    public class JavaSourceFromString extends SimpleJavaFileObject {
+    private class JavaSourceFromString extends SimpleJavaFileObject {
         /**
          * The source code of this "file".
          */
